--- a/SiteEstudoDotNetFramework/Views/Home/Login.cshtml
+++ b/SiteEstudoDotNetFramework/Views/Home/Login.cshtml
@@ -15,9 +15,11 @@
         </div>
 
         <!-- Login Form -->
-        <form>
-            <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-            <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+        <form action="/token" enctype="application/x-www-form-urlencoded" method="POST">
+            <input type="text" id="username" class="fadeIn second" name="username" placeholder="username">
+            <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
+            <input type="hidden" class="fadeIn third" id="grant_type" name="grant_type" value="password">
+
             <input type="submit" class="fadeIn fourth" value="Log In">
         </form>
 
